@startuml

class Course {
    String name
    Instructor instructor
    Textbook textbook

    Course(String name, Instructor instructor, Textbook textbook)
}
class Instructor {
    String firstName
    String lastName
    String officeNumber

    Instructor(String firstName, String lastName, String officeNumber)
    String getFirstName()
    void setFirstName(String firstName)
    String getLastName()
    void setLastName(String lastName)
    String getOfficeNumber()
    void setOfficeNumber(String officeNumber)
}
class Textbook {
    String title
    String author
    String publisher

    Textbook(String title, String author, String publisher)
    String getTitle()
    void setTitle(String title)
    String getAuthor()
    void setAuthor(String author)
    String getPublisher()
    void setPublisher(String publisher)
}

Course o-- Instructor
Course o-- Textbook

@enduml